--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,14 @@ google-generativeai~=0.8.3
 httpx~=0.27.2
 huggingface-hub~=0.26.2
 json-repair~=0.30.0
+jupyter~=1.0.0
 langchain-community~=0.3.4
 matplotlib~=3.9.2
+notebook~=7.1.1
 numpy~=1.26.4
 openai~=1.53.0
 pandas~=2.2.3
+pathlib~=1.0.1
+python-dotenv~=1.0.1
 seaborn~=0.13.2
 tenacity~=9.0.0
