--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 .env
 test_kit_dev/test_plan_output/
+test_kit_dev/test_output/
 reqs_extraction/initial_reqs_output/
 reqs_extraction/revised_reqs_output/
