--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ test_kit_dev/test_plan_output/
 test_kit_dev/test_output/
 reqs_extraction/initial_reqs_output/
 reqs_extraction/revised_reqs_output/
+.ipynb_checkpoints
