--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,6 @@ bs4~=4.12.3
 unstructured~=0.15.0
 html2text~=2024.2.9
 langchain-text-splitters~=0.3.5
+tiktoken~=0.8.0
+sentence-transformers~=3.0.1
+chromadb~=0.5.23
