--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,79 @@
-anthropic~=0.37.1
-beautifulsoup4~=4.12.3
-google-generativeai~=0.8.3
-httpx~=0.27.2
-huggingface-hub~=0.26.2
-json-repair~=0.30.0
-jupyter~=1.0.0
-langchain-community~=0.3.4
-matplotlib~=3.9.2
-notebook~=7.1.1
-numpy~=1.26.4
-openai~=1.53.0
-pandas~=2.2.3
-pathlib~=1.0.1
-python-dotenv~=1.0.1
-seaborn~=0.13.2
-tenacity~=9.0.0
-markdownify~=0.10.0
-langchain~=0.3.14
-IPython~=8.20.0
-bs4~=4.12.3
-unstructured~=0.15.0
-html2text~=2024.2.9
-langchain-text-splitters~=0.3.5
-tiktoken~=0.8.0
-sentence-transformers~=3.0.1
-chromadb~=0.5.23
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+annotated-types==0.7.0
+anthropic==0.66.0
+anyio==4.10.0
+attrs==25.3.0
+beautifulsoup4==4.13.5
+bs4==0.0.2
+cachetools==5.5.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+dataclasses-json==0.6.7
+distlib==0.4.0
+distro==1.9.0
+dotenv==0.9.9
+filelock==3.19.1
+frozenlist==1.7.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.181.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+grpcio==1.74.0
+grpcio-status==1.71.2
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.30.0
+httpx==0.28.1
+httpx-sse==0.4.1
+idna==3.10
+jiter==0.10.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.27
+langchain-community==0.3.29
+langchain-core==0.3.75
+langchain-text-splitters==0.3.11
+langsmith==0.4.23
+marshmallow==3.26.1
+multidict==6.6.4
+markdownify==0.10.0
+mypy_extensions==1.1.0
+numpy==2.3.2
+openai==1.105.0
+orjson==3.11.3
+packaging==25.0
+pandas==2.2.3
+pipenv==2025.0.4
+platformdirs==4.4.0
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==5.29.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+pyparsing==3.2.3
+python-dotenv==1.1.1
+PyYAML==6.0.2
+requests==2.32.5
+requests-toolbelt==1.0.0
+rsa==4.9.1
+sniffio==1.3.1
+soupsieve==2.8
+SQLAlchemy==2.0.43
+tenacity==9.1.2
+tqdm==4.67.1
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+uritemplate==4.2.0
+urllib3==2.5.0
+virtualenv==20.34.0
+yarl==1.20.1
+zstandard==0.24.0
