--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ bs4==0.0.2
 cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
+chromadb~=0.5.23
 dataclasses-json==0.6.7
 distlib==0.4.0
 distro==1.9.0
@@ -64,6 +65,7 @@ PyYAML==6.0.2
 requests==2.32.5
 requests-toolbelt==1.0.0
 rsa==4.9.1
+sentence-transformers~=3.0.1
 sniffio==1.3.1
 soupsieve==2.8
 SQLAlchemy==2.0.43
