--- a/requirements.txt
+++ b/requirements.txt
@@ -70,6 +70,7 @@ sniffio==1.3.1
 soupsieve==2.8
 SQLAlchemy==2.0.43
 tenacity==9.1.2
+tiktoken~=0.8.0
 tqdm==4.67.1
 typing-inspect==0.9.0
 typing-inspection==0.4.1
